@@ -29,14 +29,5 @@ This subpackage contains a set of modules, each one of them containing some algo
 In most cases, you won't need to access it directly.
 """
 
-import pygraph.algorithms.accessibility
-import pygraph.algorithms.critical
-import pygraph.algorithms.cycles
-import pygraph.algorithms.generators
-import pygraph.algorithms.filters
-import pygraph.algorithms.heuristics
-import pygraph.algorithms.minmax
-import pygraph.algorithms.searching
-import pygraph.algorithms.sorting
-import pygraph.algorithms.traversal
-import pygraph.algorithms.utils
+import pygraph.readwrite.dot
+import pygraph.readwrite.markup
